--- a/trashp/n_client/src/components/channel.css
+++ b/trashp/n_client/src/components/channel.css
@@ -9,6 +9,7 @@
   width: 100%;
   height: 800px;
   position: absolute;
+  margin: 15px auto;
 }
 
 .products {
@@ -17,8 +18,8 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 800px;
-  margin: 0 auto;
+  height: 900px;
+  margin: 25px auto;
   position: relative;
 }
 
@@ -27,7 +28,7 @@
   background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
   color: white;
   font-weight: bold;
-  border: 2px solid #f1f1f1;
+  /* border: 2px solid #f1f1f1; */
   border-radius: 6px;
   transform: translate(-50%, -50%);
   z-index: 2;
