--- a/trashp/n_client/src/components/header.css
+++ b/trashp/n_client/src/components/header.css
@@ -17,6 +17,9 @@
     font-family: 'GT-American', sans-serif;
     font-style: italic;
     font-weight: bold;
+    position: fixed;
+    top: 0;
+    z-index: 99999;
 }
 
 /* LOGO */
