--- a/trashp/n_client/src/components/sliderData.css
+++ b/trashp/n_client/src/components/sliderData.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   background-color: #1a0808;
+  margin-top: 50px;
 }
 
 .hero > .hero-container {
